[tool.poetry]
name = "atom(net)_txhistory_fromjson_toxlsx"
version = "0.1.0"
description = ""
authors = ["beegramin9 <wontae.coin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
