[tool.poetry]
name = "ethereum(net)_txhistory_fromjson_toxlsx"
version = "0.1.0"
description = ""
authors = ["beegramin9 <beegramin9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.11.1"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
